# Interface

./: .gitignore  .travis.yml  README.md  setup.cfg  test_reading.py
.circleci/: config.yml
src/Interface/: __init__.py  _data.py  _data_file.py  _interface_utils.py  _read_data_file.py  _write_data_file.py
tests/: test_filtering.py  test_reading.py  test_writing.py  test_writing_log.py
tests/data/: file_1_.txt  file_1_log.txt  file_1_structure.txt  file_1_structure_log.txt  file_1_structure_w_alt.txt  file_1_test.txt  file_2.txt  file_2_structure.txt  file_2_structure_w_alt.txt  file_2_test.txt  file_3.txt  file_3_structure.txt  file_3_structure_w_alt.txt  file_3_test.txt  file_4.txt  file_4_log.txt  file_4_structure.txt  file_4_structure_log.txt  file_4_structure_w_alt.txt  file_4_test.txt  file_5.txt  file_5_log.txt  file_5_structure.txt  file_5_structure_log.txt  file_5_structure_w_alt.txt  file_5_test.txt  file_6.txt  file_6_structure.txt  file_6_structure_w_alt.txt  file_6_test.txt  file_7.txt  file_7_structure.txt  file_7_structure_log.txt  file_7_structure_w_alt.txt  file_7_test.txt  file_8.txt  file_8_structure.txt  file_8_structure_w_alt.txt
