[metadata]
name = Interface
version = 0.0.1
author = Benoit Cote
author_email = cotebenoit8@gmail.com
description = Python tools to interface with data files
url = https://github.com/becot85/Interface
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

